Network Policies/NetworkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-socks-shop
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: socks-shop
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
           role: frontend
    egress:
    - to:
      - podSelector:
         matchLabels:
           role: database
            ```
